infra/k8s/namespace-configmap-secrets.yml
# Namespace para la aplicación
apiVersion: v1
kind: Namespace
metadata:
  name: despacho-app
  labels:
    app: despacho
    environment: production
