infra/k8s/deployments.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-container
        image: 019874521665.dkr.ecr.us-east-1.amazonaws.com/innovatech-frontend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
 
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ventas-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ventas-backend
  template:
    metadata:
      labels:
        app: ventas-backend
    spec:
      containers:
      - name: ventas-container
        image: 019874521665.dkr.ecr.us-east-1.amazonaws.com/innovatech-ventas-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
 
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: despacho-backend
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: despacho-backend
  template:
    metadata:
      labels:
        app: despacho-backend
    spec:
      containers:
      - name: despacho-container
        image: 019874521665.dkr.ecr.us-east-1.amazonaws.com/innovatech-despacho-backend:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
