infra/k8s/backend-despachos.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-despachos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-despachos
  template:
    metadata:
      labels:
        app: backend-despachos
    spec:
      containers:
        - name: back-despachos
          image: back-despachos
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1024Mi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 45
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 70
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: backend-despachos
spec:
  selector:
    app: backend-despachos
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
