infra/k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-despacho
  namespace: despacho-app
spec:
  selector:
    app: frontend-despacho
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
