infra/k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-despacho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-despacho
  template:
    metadata:
      labels:
        app: frontend-despacho
    spec:
      containers:
        - name: frontend
          image: frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-despacho
spec:
  selector:
    app: frontend-despacho
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
